[gd_scene load_steps=2 format=3 uid="uid://mg04disinfbrainstorm"]

[ext_resource type="Script" path="res://microgames/mg04_disinfectant_brainstorm/mg04_disinf_brainstorm.gd" id="1_mg04_script"]

[node name="Microgame04_DisinfBrainstorm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mg04_script")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsRow" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -70.0
offset_right = 420.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="OptionA" type="Button" parent="UI/OptionsRow"]
custom_minimum_size = Vector2(240, 120)
text = "Consult experts"

[node name="OptionB" type="Button" parent="UI/OptionsRow"]
custom_minimum_size = Vector2(260, 130)
text = "!!! DRINK IT !!!"

[node name="OptionC" type="Button" parent="UI/OptionsRow"]
custom_minimum_size = Vector2(240, 120)
text = "Run clinical trials"

[node name="HintLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_right = 1.0
offset_left = 0.0
offset_top = 30.0
offset_right = 0.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
text = "THINK BIG"

[node name="TimerBar" type="TextureProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_right = 1.0
offset_left = 220.0
offset_top = 82.0
offset_right = -220.0
offset_bottom = 96.0
grow_horizontal = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="Ronald" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.72
anchor_top = 0.18
anchor_right = 0.72
anchor_bottom = 0.18
offset_right = 220.0
offset_bottom = 240.0

[node name="RonaldSprite" type="ColorRect" parent="Ronald"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.6, 0.2, 1)

[node name="RonaldLabel" type="Label" parent="Ronald"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_font_sizes/font_size = 22
text = "Ronald Dump"

[node name="Debug" type="Node" parent="."]

[node name="StateLabel" type="Label" parent="Debug"]
text = "State"
